src/objects/Inventory_Hold_Expiry_Date_Offsets__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>For setting the number of days to offset the inventory expiry date when dealing with different objects.  Negative numbers mean before the date in question, positive numbers mean after the date in question.</description>
    <fields>
        <fullName>Account_Day_Offset__c</fullName>
        <defaultValue>3</defaultValue>
        <inlineHelpText>Number of work days from today&apos;s date to hold the inventory</inlineHelpText>
        <label>Account Day Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan_Day_Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of  work days before or after the Quote &quot;Valid Until&quot; date to hold the inventory</inlineHelpText>
        <label>Quote Rate Plan Day Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_Charge_Day_Offset__c</fullName>
        <defaultValue>-7</defaultValue>
        <inlineHelpText>The number of work days before or after the subscription expire date to hold the inventory</inlineHelpText>
        <label>Subscription Product Charge Day Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory Hold Expiry Date Offsets</label>
</CustomObject>